--- a/CarRentalWebsite/CarRentalcss.css
+++ b/CarRentalWebsite/CarRentalcss.css
@@ -119,7 +119,8 @@ nav a {
   }
 
   #cars{
-    background-color: grey;
+    background-color:  rgb(16, 16, 16);
+    opacity: 90%;
   }
   
   .car-listing {
@@ -142,9 +143,10 @@ nav a {
   
   .car-image {
     /* Styles for car image */
-    flex: 3; /* 30% of the width */
+    flex: 3; 
     position: relative;
     height: 60vh;
+    margin-bottom: 15px;
   }
   
   .car-image img {
@@ -152,12 +154,60 @@ nav a {
     height: 100%;
     object-fit: cover; /* Display the image at full size and maintain aspect ratio */
   }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 20;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+    align-items: center; /* Center horizontally */
+    padding: 10px;
+  }
+  .modal-dialog.modal-dialog-centered {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+  }
   
-  /*Customize Slick carousel*/
- /* Slider styles */
+  .modal-content {
+    max-width: 500px; /* Adjust the width as per your design */
+    width: 100%;
+    background-color: #fff;
+    padding: 10px;
+    border: 1px solid #888;
+    display: flex;
+  }
+  .form-row {
+    display: flex;
+    align-items: center;
+    margin: 10px 0; /* Add space between rows */
+  }
+
+  .form-row label,
+  .form-row input,
+  .form-row select,
+  .form-row button {
+    flex: auto;
+    margin-right: 10px; /* Add space between label/input elements */
+  }
+  
+  /* Responsive styles */
+  @media (max-width: 768px) {
+    .modal-content {
+      width: 100%;
+    }
+  }
+  
+  /*Slick carousel*/
   .slider-container {
     width: 80%;
-    max-width: 1000px;
+    max-width: 100%;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
@@ -185,12 +235,10 @@ nav a {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 30px;
+    font-size: 20px;
     cursor: pointer;
     padding: 10px;
     color: #fff;
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 50%;
     z-index: 10;
   }
   
@@ -202,6 +250,12 @@ nav a {
     right: 15px;
   }
   
+  .prev:hover,
+  .next:hover {
+    font-weight: bolder;
+    color: black;
+  }
+
   .contact {
     text-align: left;
     padding: 1rem;
@@ -219,7 +273,7 @@ nav a {
   }
 
   /* Popup modal styles */
-.modal {
+  .user-modal {
     display: none;
     position: fixed;
     top: 0;
@@ -229,7 +283,7 @@ nav a {
     background-color: rgba(0, 0, 0, 0.6);
   }
   
-  .modal-content {
+  .user-modal-content {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -240,7 +294,7 @@ nav a {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   }
   
-  .close-btn {
+  .user-close-btn {
     position: absolute;
     top: 10px;
     right: 10px;
